--- a/src/GUI/Frame_Cashier_Menu.form
+++ b/src/GUI/Frame_Cashier_Menu.form
@@ -127,6 +127,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Transaksi"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_transActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="button_input_barang">
       <Properties>
