--- a/src/GUI/Frame_Transaksi.form
+++ b/src/GUI/Frame_Transaksi.form
@@ -513,6 +513,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="inp_kategori">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inp_kategoriActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="inp_id">
             </Component>
